update results files

--- a/internimage_demo_fisheye.ipynb
+++ b/internimage_demo_fisheye.ipynb
@@ -10,6 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/opt/conda/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "/workspace/FishEye8k/fisheye_challenge/ops_dcnv3/modules/dcnv3.py:20: UserWarning: Now, we support DCNv4 in InternImage.\n",
       "  warnings.warn('Now, we support DCNv4 in InternImage.')\n"
      ]
@@ -60,14 +62,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-21 05:03:26,056 - mmdet - INFO - using core type: DCNv3\n",
-      "2024-02-21 05:03:26,057 - mmdet - INFO - using activation layer: GELU\n",
-      "2024-02-21 05:03:26,057 - mmdet - INFO - using main norm layer: LN\n",
-      "2024-02-21 05:03:26,058 - mmdet - INFO - using dpr: linear, 0.6\n",
-      "2024-02-21 05:03:26,058 - mmdet - INFO - level2_post_norm: False\n",
-      "2024-02-21 05:03:26,059 - mmdet - INFO - level2_post_norm_block_ids: None\n",
-      "2024-02-21 05:03:26,059 - mmdet - INFO - res_post_norm: False\n",
-      "2024-02-21 05:03:26,059 - mmdet - INFO - use_dcn_v4_op: False\n"
+      "2024-02-21 18:41:14,864 - mmdet - INFO - using core type: DCNv3\n",
+      "2024-02-21 18:41:14,865 - mmdet - INFO - using activation layer: GELU\n",
+      "2024-02-21 18:41:14,865 - mmdet - INFO - using main norm layer: LN\n",
+      "2024-02-21 18:41:14,865 - mmdet - INFO - using dpr: linear, 0.6\n",
+      "2024-02-21 18:41:14,866 - mmdet - INFO - level2_post_norm: False\n",
+      "2024-02-21 18:41:14,866 - mmdet - INFO - level2_post_norm_block_ids: None\n",
+      "2024-02-21 18:41:14,866 - mmdet - INFO - res_post_norm: False\n",
+      "2024-02-21 18:41:14,867 - mmdet - INFO - use_dcn_v4_op: False\n"
      ]
     },
     {
@@ -139,13 +141,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Result is save at results/camera1_A_100.png\n"
+      "Result is save at results/internimage_camera1_A_100.png\n"
      ]
     }
    ],
    "source": [
     "mmcv.mkdir_or_exist(output)\n",
-    "out_file = Path(output) / Path(img)\n",
+    "out_file = Path(output) / Path(\"internimage_\"+img)\n",
     "# show the results\n",
     "model.show_result(\n",
     "  img_dir,\n",
