put Detector back to utils

--- a/inspect_results.ipynb
+++ b/inspect_results.ipynb
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from val import FisheyeDetectionValidator\n",
+    "from utils import FisheyeDetectionValidator\n",
     "from ultralytics.utils import ops\n",
     "\n",
     "class_name = {0: 'bus', 1: 'motorcycle', 2: 'car', 3: 'person', 4: 'truck'}\n",
