fix scale param

--- a/Detectron2.ipynb
+++ b/Detectron2.ipynb
@@ -850,7 +850,63 @@
       "\u001b[32m[04/01 18:30:20 d2.evaluation.evaluator]: \u001b[0mInference done 2679/2712. Dataloading: 0.0024 s/iter. Inference: 0.2869 s/iter. Eval: 0.0006 s/iter. Total: 0.2900 s/iter. ETA=0:00:09\n",
       "\u001b[32m[04/01 18:30:26 d2.evaluation.evaluator]: \u001b[0mInference done 2696/2712. Dataloading: 0.0024 s/iter. Inference: 0.2870 s/iter. Eval: 0.0006 s/iter. Total: 0.2902 s/iter. ETA=0:00:04\n",
       "\u001b[32m[04/01 18:30:30 d2.evaluation.evaluator]: \u001b[0mTotal inference time: 0:13:05.401464 (0.290137 s / iter per device, on 1 devices)\n",
-      "\u001b[32m[04/01 18:30:30 d2.evaluation.evaluator]: \u001b[0mTotal inference pure compute time: 0:12:56 (0.286890 s / iter per device, on 1 devices)\n"
+      "\u001b[32m[04/01 18:30:30 d2.evaluation.evaluator]: \u001b[0mTotal inference pure compute time: 0:12:56 (0.286890 s / iter per device, on 1 devices)\n",
+      "\u001b[32m[04/01 18:30:31 d2.evaluation.coco_evaluation]: \u001b[0mPreparing results for COCO format ...\n",
+      "\u001b[32m[04/01 18:30:31 d2.evaluation.coco_evaluation]: \u001b[0mSaving results to ./output/coco_instances_results.json\n",
+      "\u001b[32m[04/01 18:30:32 d2.evaluation.coco_evaluation]: \u001b[0mEvaluating predictions with unofficial COCO API...\n",
+      "Loading and preparing results...\n",
+      "DONE (t=0.66s)\n",
+      "creating index...\n",
+      "index created!\n",
+      "\u001b[32m[04/01 18:30:33 d2.evaluation.fast_eval_api]: \u001b[0mEvaluate annotation type *bbox*\n",
+      "\u001b[32m[04/01 18:30:34 d2.evaluation.fast_eval_api]: \u001b[0mCOCOeval_opt.evaluate() finished in 1.53 seconds.\n",
+      "\u001b[32m[04/01 18:30:35 d2.evaluation.fast_eval_api]: \u001b[0mAccumulating evaluation results...\n",
+      "\u001b[32m[04/01 18:30:35 d2.evaluation.fast_eval_api]: \u001b[0mCOCOeval_opt.accumulate() finished in 0.45 seconds.\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.014\n",
+      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.032\n",
+      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.007\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.002\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.014\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.048\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.013\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.050\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.069\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.015\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.075\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.242\n",
+      "\u001b[32m[04/01 18:30:35 d2.evaluation.coco_evaluation]: \u001b[0mEvaluation results for bbox: \n",
+      "|  AP   |  AP50  |  AP75  |  APs  |  APm  |  APl  |\n",
+      "|:-----:|:------:|:------:|:-----:|:-----:|:-----:|\n",
+      "| 1.356 | 3.231  | 0.668  | 0.227 | 1.384 | 4.840 |\n",
+      "\u001b[32m[04/01 18:30:35 d2.evaluation.coco_evaluation]: \u001b[0mPer-category bbox AP: \n",
+      "| category   | AP    | category   | AP    | category   | AP    |\n",
+      "|:-----------|:------|:-----------|:------|:-----------|:------|\n",
+      "| Bus        | 0.007 | Bike       | 0.658 | Car        | 5.999 |\n",
+      "| Pedestrian | 0.064 | Truck      | 0.053 |            |       |\n",
+      "\u001b[32m[04/01 18:30:35 d2.engine.defaults]: \u001b[0mEvaluation results for fisheye8k_val in csv format:\n",
+      "\u001b[32m[04/01 18:30:35 d2.evaluation.testing]: \u001b[0mcopypaste: Task: bbox\n",
+      "\u001b[32m[04/01 18:30:35 d2.evaluation.testing]: \u001b[0mcopypaste: AP,AP50,AP75,APs,APm,APl\n",
+      "\u001b[32m[04/01 18:30:35 d2.evaluation.testing]: \u001b[0mcopypaste: 1.3563,3.2308,0.6679,0.2274,1.3840,4.8395\n",
+      "\u001b[32m[04/01 18:30:35 d2.utils.events]: \u001b[0m eta: 0:07:03  iter: 99  total_loss: 1.495  loss_cls: 0.6561  loss_box_reg: 0.5301  loss_rpn_cls: 0.0866  loss_rpn_loc: 0.2433    time: 2.0005  last_time: 1.4893  data_time: 0.6670  last_data_time: 0.5648   lr: 8.2668e-05  max_mem: 45332M\n",
+      "\u001b[32m[04/01 18:31:15 d2.utils.events]: \u001b[0m eta: 0:06:24  iter: 119  total_loss: 1.481  loss_cls: 0.6268  loss_box_reg: 0.5546  loss_rpn_cls: 0.0817  loss_rpn_loc: 0.2228    time: 2.0032  last_time: 2.4987  data_time: 0.6442  last_data_time: 1.0114   lr: 9.9318e-05  max_mem: 45332M\n",
+      "\u001b[32m[04/01 18:31:55 d2.utils.events]: \u001b[0m eta: 0:05:38  iter: 139  total_loss: 1.483  loss_cls: 0.6131  loss_box_reg: 0.5743  loss_rpn_cls: 0.07591  loss_rpn_loc: 0.2275    time: 2.0001  last_time: 1.6218  data_time: 0.6446  last_data_time: 0.4660   lr: 0.00011597  max_mem: 45332M\n",
+      "\u001b[32m[04/01 18:32:34 d2.utils.events]: \u001b[0m eta: 0:04:55  iter: 159  total_loss: 1.485  loss_cls: 0.6  loss_box_reg: 0.5943  loss_rpn_cls: 0.07381  loss_rpn_loc: 0.2277    time: 1.9933  last_time: 2.2162  data_time: 0.5869  last_data_time: 0.7973   lr: 0.00013262  max_mem: 45332M\n",
+      "\u001b[32m[04/01 18:33:13 d2.utils.events]: \u001b[0m eta: 0:04:13  iter: 179  total_loss: 1.507  loss_cls: 0.5959  loss_box_reg: 0.6003  loss_rpn_cls: 0.06985  loss_rpn_loc: 0.2281    time: 1.9902  last_time: 2.1357  data_time: 0.6079  last_data_time: 0.4368   lr: 0.00014927  max_mem: 45332M\n",
+      "\u001b[5m\u001b[31mWARNING\u001b[0m \u001b[32m[04/01 18:33:53 d2.data.datasets.coco]: \u001b[0m\n",
+      "Category ids in annotations are not in [1, #categories]! We'll apply a mapping for you.\n",
+      "\n",
+      "\u001b[32m[04/01 18:33:53 d2.data.datasets.coco]: \u001b[0mLoaded 2712 images in COCO format from /workspace/FishEye8k/dataset/Fisheye8K_all_including_train/test/test.json\n",
+      "\u001b[32m[04/01 18:33:54 d2.data.dataset_mapper]: \u001b[0m[DatasetMapper] Augmentations used in inference: [ResizeShortestEdge(short_edge_length=(800, 800), max_size=1333, sample_style='choice')]\n",
+      "\u001b[32m[04/01 18:33:54 d2.data.common]: \u001b[0mSerializing the dataset using: <class 'detectron2.data.common._TorchSerializedList'>\n",
+      "\u001b[32m[04/01 18:33:54 d2.data.common]: \u001b[0mSerializing 2712 elements to byte tensors and concatenating them all ...\n",
+      "\u001b[32m[04/01 18:33:54 d2.data.common]: \u001b[0mSerialized dataset takes 2.01 MiB\n",
+      "\u001b[32m[04/01 18:33:54 d2.evaluation.evaluator]: \u001b[0mStart inference on 2712 batches\n",
+      "\u001b[32m[04/01 18:34:02 d2.evaluation.evaluator]: \u001b[0mInference done 11/2712. Dataloading: 0.0009 s/iter. Inference: 0.2648 s/iter. Eval: 0.0003 s/iter. Total: 0.2660 s/iter. ETA=0:11:58\n",
+      "\u001b[32m[04/01 18:34:08 d2.evaluation.evaluator]: \u001b[0mInference done 29/2712. Dataloading: 0.0012 s/iter. Inference: 0.2812 s/iter. Eval: 0.0006 s/iter. Total: 0.2832 s/iter. ETA=0:12:39\n",
+      "\u001b[32m[04/01 18:34:13 d2.evaluation.evaluator]: \u001b[0mInference done 49/2712. Dataloading: 0.0012 s/iter. Inference: 0.2730 s/iter. Eval: 0.0005 s/iter. Total: 0.2749 s/iter. ETA=0:12:12\n",
+      "\u001b[32m[04/01 18:34:18 d2.evaluation.evaluator]: \u001b[0mInference done 67/2712. Dataloading: 0.0013 s/iter. Inference: 0.2753 s/iter. Eval: 0.0005 s/iter. Total: 0.2772 s/iter. ETA=0:12:13\n",
+      "\u001b[32m[04/01 18:34:23 d2.evaluation.evaluator]: \u001b[0mInference done 86/2712. Dataloading: 0.0031 s/iter. Inference: 0.2728 s/iter. Eval: 0.0005 s/iter. Total: 0.2765 s/iter. ETA=0:12:05\n",
+      "\u001b[32m[04/01 18:34:28 d2.evaluation.evaluator]: \u001b[0mInference done 103/2712. Dataloading: 0.0028 s/iter. Inference: 0.2772 s/iter. Eval: 0.0005 s/iter. Total: 0.2805 s/iter. ETA=0:12:11\n"
      ]
     }
    ],
